[tool.poetry]
name = "udemy-langgraph-course"
version = "0.1.0"
description = ""
authors = ["akshaygrao <akshaygrao77@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
python-dotenv = "^1.1.0"
langchain = "^0.3.23"
langchain-openai = "^0.3.12"
langgraph = "^0.3.25"
dotenv = "^0.9.9"
langchain-community = "^0.3.21"
langchainhub = "^0.1.21"
beautifulsoup4 = "^4.13.3"
tavily-python = "^0.5.4"
langchain-chroma = "^0.2.2"
pytest = "^8.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
